<resources>
    <string name="app_name">Notes</string>
    <string name="add_new_note">Add new note</string>
    <string name="favorite_note">Favorite note</string>
    <string name="delete_note">Delete note</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="settings">Settings</string>
    <string name="order_by">Order by</string>
    <string name="date">Date</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="russian">Русский</string>
    <string name="night_mode">Night mode</string>
    <string name="note_was_deleted">Note was deleted</string>
    <string name="undo">UNDO</string>
    <string name="note_successfully_restored">Note successfully restored</string>
    <string name="error_message">Something went wrong.\nPlease try again</string>
    <string name="error">Error</string>
    <string name="try_again">Try again</string>

    <string-array name="filter">
        <item>All</item>
        <item>Favorite</item>
    </string-array>
</resources>